--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,20 +1,56 @@
-name: Workflow Demo
+# name: Workflow Demo
 
-on: [push]
+# on: [push]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v4
+
+#     - name: Create a text file
+#       run: echo "Hello, world!" > hello.txt
+
+#     - name: Archive text file
+#       uses: actions/upload-artifact@v4
+#       with:
+#         name: hello-artifact
+#         path: hello.txt
+
+name: Artifact Workflow
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Create a text file
-      run: echo "Hello, world!" > hello.txt
+      - name: Create hello.txt
+        run: echo "Hello, world!" > hello.txt
 
-    - name: Archive text file
-      uses: actions/upload-artifact@v4
-      with:
-        name: hello-artifact
-        path: hello.txt
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: hello-artifact
+          path: hello.txt
+
+  download:
+    runs-on: ubuntu-latest
+    needs: build  # This ensures the download job runs after the build job
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: hello-artifact
+          path: ./artifacts
+
+      - name: Display content of hello.txt
+        run: cat ./artifacts/hello.txt
